2014-05-22  Benjamin Poulain  <bpoulain@apple.com>

        Add Yusuke Suzuki to the list of contributors

        * Scripts/webkitpy/common/config/contributors.json:

2014-05-22  Michael Saboff  <msaboff@apple.com>

        Eliminate n/total progress update from run-jsc-stress-tests output to file
        https://bugs.webkit.org/show_bug.cgi?id=133191

        Reviewed by Geoffrey Garen.

        Changed progressMeter setting to be based on stdout being a tty instead of
        stdin.  Unified the processing of output from the shell runner to match the
        same processing as is used by the makefile runner.  As part of this, the 
        shell runner script was simplified.  It now forwards the output of each
        test_script just like the Makefile and doesn't provide its own progress.

        * Scripts/jsc-stress-test-helpers/shell-runner.sh:
        * Scripts/run-jsc-stress-tests:

2014-05-22  Michael Saboff  <msaboff@apple.com>

        Add option to run-jsc-stress-tests to use installed jsc
        https://bugs.webkit.org/show_bug.cgi?id=133102

        Reviewed by Geoffrey Garen.

        Added --no-copy option to not copy a JavaScriptCore framework, but use the one
        provied with the --jsc option.

        * Scripts/run-jsc-stress-tests:

2014-05-21  Zsolt Borbely  <zsborbely.u-szeged@partner.samsung.com>

        [EFL] Add include path of compact_unwind_encoding.h if FTL JIT is enabled
        https://bugs.webkit.org/show_bug.cgi?id=132907

        Reviewed by Gyuyoung Kim.

        We need the mach-o/compact_unwind_encoding.h header from libc++abi-dev package
        in JavaScriptCore/ftl/FTLUnwindInfo.cpp when FTL JIT is enabled.

        * efl/install-dependencies:

2014-05-21  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        REGRESSION(r169092): It broke run-jsc-stress tests on non Mac platforms
        https://bugs.webkit.org/show_bug.cgi?id=133145

        Reviewed by Csaba Osztrogonác.

        * Scripts/run-jsc-stress-tests: